# feedMePlease

./: CMakeLists.txt  README.md
src/: FeedHandler.cpp  MarketDataFeedHandler.cpp  main.cpp
src/feeds/: MarketDataFeedCallbacks.cpp  MarketDataFeeds.cpp  SynchroniseTime.cpp  WebSocket.cpp
src/feeds/tick/: InstrumentType.cpp  TickDataBuffer.cpp  Venue.cpp
src/io/: MarketDataFeed.cpp  MarketDataFeedCallbacks.cpp  TickData.cpp  WebSocket.cpp
src/utils/: Concurrency.cpp  StringModifications.cpp  ThreadAffinity.cpp
